@@ -39,7 +39,6 @@ import uk.gov.gchq.palisade.service.resource.stream.ProducerTopicConfiguration;
 
 import javax.annotation.PreDestroy;
 
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map.Entry;
@@ -80,7 +79,7 @@ public class ResourceApplication {
                                final PersistenceLayer persistence,
                                @Qualifier("configuredResourceBuilder") final Supplier<List<Entry<Resource, LeafResource>>> resourceBuilder,
                                @Qualifier("threadPoolTaskExecutor") final Executor executor) {
-        this.runners = Collections.unmodifiableSet(runners);
+        this.runners = Set.copyOf(runners);
         this.materialiser = materialiser;
         this.persistence = persistence;
         this.executor = executor;
